--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
         <gson.version>2.8.6</gson.version>
         <aspectj.version>1.9.6</aspectj.version>
 
+        <mysql.connector.version>8.0.22</mysql.connector.version>
+        <alibaba.druid.verison>1.2.4</alibaba.druid.verison>
+        <mybatis.version>3.5.6</mybatis.version>
+        <mybatis.spring.version>2.0.6</mybatis.spring.version>
+
         <servlet.api.version>4.0.1</servlet.api.version>
         <javax.validation.version>2.0.1.Final</javax.validation.version>
 
@@ -301,6 +306,29 @@
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectj.version}</version>
             </dependency>
+
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.connector.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${alibaba.druid.verison}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis.spring.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.slf4j</groupId>
