--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <mybatis.version>3.5.6</mybatis.version>
         <mybatis.spring.version>2.0.6</mybatis.spring.version>
 
+        <okhttp.version>4.9.0</okhttp.version>
+
         <servlet.api.version>4.0.1</servlet.api.version>
         <javax.validation.version>2.0.1.Final</javax.validation.version>
 
@@ -329,6 +331,11 @@
                 <version>${mybatis.spring.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
