--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <jackson.version>2.12.0</jackson.version>
         <gson.version>2.8.6</gson.version>
         <aspectj.version>1.9.6</aspectj.version>
+        <javax.validation.version>2.0.1.Final</javax.validation.version>
+        <hibernate.validator.version>7.0.0.Final</hibernate.validator.version>
 
         <mysql.connector.version>8.0.22</mysql.connector.version>
         <alibaba.druid.verison>1.2.4</alibaba.druid.verison>
@@ -307,6 +309,18 @@
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectj.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>${javax.validation.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${hibernate.validator.version}</version>
             </dependency>
 
 
