--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <dubbo.version>2.7.8</dubbo.version>
-        <trace.version>1.0-SNAPSHOT</trace.version>
         <nacos.config.version>0.2.7</nacos.config.version>
         <nacos.spring.context.version>1.0.0</nacos.spring.context.version>
         <nacos.client.version>1.3.2</nacos.client.version>
@@ -123,18 +122,6 @@
             </dependency>
 
             <dependency>
-                <groupId>com.trace</groupId>
-                <artifactId>trace-web</artifactId>
-                <version>${trace.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.trace</groupId>
-                <artifactId>trace-dubbo</artifactId>
-                <version>${trace.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
@@ -209,6 +196,26 @@
                     <exclusion>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-thymeleaf</artifactId>
+                <version>${spring.boot.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>log4j-over-slf4j</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-logging</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
                     </exclusion>
                 </exclusions>
             </dependency>
