--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <nacos.client.version>1.3.2</nacos.client.version>
         <alibaba.spring.context.version>1.0.10</alibaba.spring.context.version>
 
-        <spring.version>5.0.7.RELEASE</spring.version>
+        <spring.version>5.2.2.RELEASE</spring.version>
         <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
 
         <yaml.version>1.27</yaml.version>
@@ -27,6 +27,7 @@
         <commons.codec.version>1.15</commons.codec.version>
         <commons.fileupload.version>1.4</commons.fileupload.version>
         <common.lang3.version>3.11</common.lang3.version>
+        <common.text.version>1.9</common.text.version>
         <common.collections4.version>4.4</common.collections4.version>
         <guava.version>30.1-jre</guava.version>
         <lombok.version>1.18.16</lombok.version>
@@ -190,6 +191,12 @@
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring.boot.version}</version>
                 <exclusions>
@@ -291,6 +298,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${common.text.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
@@ -376,7 +389,6 @@
                 <artifactId>kotlin-stdlib-common</artifactId>
                 <version>${kotlin.version}</version>
             </dependency>
-
 
             <dependency>
                 <groupId>org.slf4j</groupId>
