--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <common.collections4.version>4.4</common.collections4.version>
         <guava.version>30.1-jre</guava.version>
         <lombok.version>1.18.16</lombok.version>
-        <jackson.version>2.12.0</jackson.version>
+        <jackson.version>2.12.1</jackson.version>
         <gson.version>2.8.6</gson.version>
         <aspectj.version>1.9.6</aspectj.version>
         <javax.validation.version>2.0.1.Final</javax.validation.version>
@@ -45,6 +45,9 @@
 
         <okhttp.version>4.9.0</okhttp.version>
         <kotlin.version>1.4.20</kotlin.version>
+
+        <kafka.version>2.7.0</kafka.version>
+        <scala.version>2.13.4</scala.version>
 
         <servlet.api.version>4.0.1</servlet.api.version>
 
@@ -262,6 +265,13 @@
             </dependency>
 
             <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jdk8</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+
+            <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${yaml.version}</version>
@@ -388,6 +398,36 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib-common</artifactId>
                 <version>${kotlin.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka_2.13</artifactId>
+                <version>${kafka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${kafka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${kafka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-library</artifactId>
+                <version>${scala.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-reflect</artifactId>
+                <version>${scala.version}</version>
             </dependency>
 
             <dependency>
