--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 
         <kafka.version>2.7.0</kafka.version>
         <scala.version>2.13.4</scala.version>
+        <elasticsearch.client.version>7.10.2</elasticsearch.client.version>
 
         <servlet.api.version>4.0.1</servlet.api.version>
 
@@ -416,6 +417,12 @@
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-streams</artifactId>
                 <version>${kafka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>${elasticsearch.client.version}</version>
             </dependency>
 
             <dependency>
