--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <javax.validation.version>2.0.1.Final</javax.validation.version>
         <hibernate.validator.version>6.0.18.Final</hibernate.validator.version>
         <easyexcel.version>2.2.7</easyexcel.version>
+        <zk.curator.version>5.1.0</zk.curator.version>
 
         <mysql.connector.version>8.0.22</mysql.connector.version>
         <alibaba.druid.verison>1.2.4</alibaba.druid.verison>
@@ -432,6 +433,18 @@
                 <version>${scala.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-framework</artifactId>
+                <version>${zk.curator.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-client</artifactId>
+                <version>${zk.curator.version}</version>
+            </dependency>
+            
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
