--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
         <spring.version>5.2.2.RELEASE</spring.version>
         <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
+        <spring.data.redis.version>2.1.10.RELEASE</spring.data.redis.version>
 
         <yaml.version>1.27</yaml.version>
         <commons.io.version>2.8.0</commons.io.version>
@@ -452,11 +453,16 @@
             </dependency>
 
             <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-redis</artifactId>
+                <version>${spring.data.redis.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
