--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
         <maven.surefire.version>3.0.0-M5</maven.surefire.version>
 
         <dubbo.version>2.7.8</dubbo.version>
-        <nacos.config.version>0.2.7</nacos.config.version>
         <nacos.spring.context.version>1.0.0</nacos.spring.context.version>
         <nacos.client.version>1.3.2</nacos.client.version>
         <alibaba.spring.context.version>1.0.10</alibaba.spring.context.version>
@@ -57,6 +56,7 @@
 
         <slf4j.version>1.7.29</slf4j.version>
         <apache.log4j.version>2.12.1</apache.log4j.version>
+        <log4j.version>1.2.17</log4j.version>
 
         <junit.version>5.7.0</junit.version>
     </properties>
@@ -105,22 +105,6 @@
                 <groupId>com.alibaba.nacos</groupId>
                 <artifactId>nacos-client</artifactId>
                 <version>${nacos.client.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alibaba.boot</groupId>
-                <artifactId>nacos-config-spring-boot-starter</artifactId>
-                <version>${nacos.config.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>logback-classic</artifactId>
-                        <groupId>ch.qos.logback</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>log4j-to-slf4j</artifactId>
-                        <groupId>org.apache.logging.log4j</groupId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
             <dependency>
@@ -463,7 +447,6 @@
                 <artifactId>spring-data-redis</artifactId>
                 <version>${spring.data.redis.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
